<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maps In My Pocket</string>
    <string name="version">1.4.4</string>
    <string name="about">Visit\n
                         code.google.com/p/mapinmypocket\n
                         \n
                         Created by Boulanger Marc\n
                         2010</string>
    
    <string name="none">None</string>
    <string name="error">Error</string>
    <string name="search">Search</string>
    <string name="select">Select a location from the list</string>
    <string name="clear">Clear</string>
    <string name="download">Download</string>
    
    <string name="map_menu_search">Search</string>
    <string name="map_menu_position">My position</string>
    <string name="map_menu_compass">Compass</string>
    <string name="map_menu_mapstyle">Map style</string>
    <string name="map_menu_infos">Info</string>
    <string name="map_menu_perspective">Perspective</string>
    <string name="map_menu_settings">Preferences</string>
    <string name="map_menu_load">Load GPX/KML File</string>

    <string name="tracks_menu_refresh">Refresh</string>

    <string name="searchbox_title">Search</string>

    <string name="inline_preferences_maps">Map options</string>
    <string name="inline_preferences_gps">GPS options</string>
    <string name="inline_preferences_other">Other options</string>

    <string name="settings_maps">Maps</string>
    <string name="settings_map_overlays">Map overlays</string>
    <string name="settings_directions">Directions</string>
    <string name="settings_gps">GPS</string>
    <string name="settings_resolution">Resolution</string>
    <string name="settings_search">Search</string>
    <string name="settings_units">Units</string>
    <string name="settings_voices">Voice</string>

    <string name="settings_summary_maps">Let you choose which type of map to use</string>
    <string name="settings_summary_map_overlays">Let you choose which type of map overlay to use</string>
    <string name="settings_summary_directions">Directions</string>
    <string name="settings_summary_gps">GPS preferences</string>
    <string name="settings_summary_resolution">Resolution</string>
    <string name="settings_summary_search">Search</string>
    <string name="settings_summary_units">Units</string>
    <string name="settings_summary_voices">Voice</string>
    <string name="settings_summary_notifications">Choose when and how to receive notifications</string>
    
    <string name="settings_dialog_list_title">Available maps</string>
    <string name="settings_dialog_overlay_list_title">Available overlays</string>
    
    <string name="settings_gps_follow">Following</string>
    <string name="settings_gps_precision">Precision</string>

    <string name="settings_summary_gps_follow">The map follows the GPS position</string>
    <string name="settings_summary_gps_precision">Show the GPS precision circle on the map</string>
        
    <string name="settings_color_inner">Inner color</string>
    <string name="settings_color_outer">Outer color</string>
    <string name="settings_enable_color_outer">Enable outer color</string>
        
    <string name="settings_summary_color_inner">Select the inner color of your tracks</string>
    <string name="settings_summary_color_outer">Select the outer color of your tracks</string>
    
    <string name="settings_bg_color_dialog">Color picker</string>
    <string name="settings_bg_color_confirm">Confirm color</string>
    <string name="settings_default_color_confirm">Default color</string>
        
    <string name="bubble_interactions_add_wpt">Add as a waypoint</string>
    
    <string name="navigation_directions_error">An error occured when getting drections</string>
    <string name="navigation_position_unavailable">Current position unavailable</string>
    <string name="navigation_destination_unavailable">Destination unavailable</string>
    
    <string name="tiledownload_choosemap">Choose a map style</string>
    <string name="tiledownload_choosezoom">Choose the zoom levels</string>
</resources>
